[metadata]
name = mne-bids
url = https://github.com/mne-tools/mne-bids
author = mne-bids developers
maintainer = Mainak Jas
maintainer_email = mainakjas@gmail.com
description = MNE-BIDS: Organizing MEG, EEG, and iEEG data according to the BIDS specification and facilitating their analysis with MNE-Python
keywords = meg, eeg, ieeg, bids, brain imaging data structure, neuroscience, neuroimaging
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license = BSD (3-clause)
license_files = LICENSE
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  License :: OSI Approved
  Topic :: Software Development
  Topic :: Scientific/Engineering
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: Unix
  Operating System :: MacOS
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
project_urls =
  Documentation = https://mne.tools/mne-bids
  Bug Reports = https://github.com/mne-tools/mne-bids/issues
  Source = https://github.com/mne-tools/mne-bids

[options]
python_requires = ~= 3.6
install_requires =
  mne >= 0.21.2
  numpy>=1.15.4
  scipy>=1.1.0
packages = find:
include_package_data = True

[options.extras_require]
full =
  nibabel >= 2.2
  pybv >= 0.5
  matplotlib
  pandas >= 0.23.4

[options.entry_points]
console_scripts =
    mne_bids = mne_bids.commands.run:main

[bdist_wheel]
universal = true

[flake8]
exclude = __init__.py
ignore = W504,I101,I100,I201
per-file-ignores =
    mne_bids/commands/tests/test_*.py:E402
    mne_bids/tests/test_*.py:E402

[tool:pytest]
addopts =
    --showlocals --durations=20 -ra --junit-xml=junit-results.xml
    --ignore=doc
filterwarnings =
    error
    ignore:Estimation of line frequency only supports.*:RuntimeWarning
    ignore:There are channels without locations (n/a)*:RuntimeWarning
    ignore:Did not find any electrodes.tsv.*:RuntimeWarning
    ignore:Did not find any coordsystem.json.*:RuntimeWarning
    ignore:Did not find any events.tsv.*:RuntimeWarning
    ignore:No events found or provided.*:RuntimeWarning
    ignore:Participants file not found for.*:RuntimeWarning
    ignore:Converting to FIF for anonymization:RuntimeWarning
    ignore:Converting to BV for anonymization:RuntimeWarning
    ignore:Converting data files to BrainVision format:RuntimeWarning
    ignore:Writing of electrodes.tsv is not supported for datatype.*:RuntimeWarning
    ignore:numpy.ufunc size changed.*:RuntimeWarning
    ignore:tostring\(\) is deprecated.*:DeprecationWarning
    ignore:MEG ref channel RMSP did not.*:RuntimeWarning

[pydocstyle]
convention = pep257
match_dir = ^(?!\.|doc|examples).*$
add-ignore = D100,D104,D107,D413
add-select = D214,D215,D404,D405,D406,D407,D408,D409,D410,D411

[coverage:run]
omit =
    # Do not include test script in coverage report
    *tests*

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
