[metadata]
name = mne-bids
url = https://github.com/mne-tools/mne-bids
author = mne-bids developers
maintainer = Stefan Appelhoff
maintainer_email = stefan.appelhoff@mailbox.org
description = MNE-BIDS: Organizing MEG, EEG, and iEEG data according to the BIDS specification and facilitating their analysis with MNE-Python
keywords = meg, eeg, ieeg, bids, brain imaging data structure, neuroscience, neuroimaging
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  License :: OSI Approved
  Topic :: Software Development
  Topic :: Scientific/Engineering
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
project_urls =
  Documentation = https://mne.tools/mne-bids
  Bug Reports = https://github.com/mne-tools/mne-bids/issues
  Source = https://github.com/mne-tools/mne-bids

[options]
python_requires = ~= 3.8
install_requires =
  mne >= 1.2
  numpy >= 1.18.1
  scipy >= 1.4.1
  setuptools
packages = find:
include_package_data = True

[options.extras_require]
full =
  nibabel >= 2.5
  pybv >= 0.7.5
  matplotlib < 3.7
  pandas >= 1.0.0
  EDFlib-Python >= 1.0.6
  pymatreader >= 0.0.30

[options.entry_points]
console_scripts =
    mne_bids = mne_bids.commands.run:main

[bdist_wheel]
universal = true

[flake8]
exclude = __init__.py
ignore = W504,I101,I100,I201
per-file-ignores =
    mne_bids/commands/tests/test_*.py:E402
    mne_bids/tests/test_*.py:E402

[tool:pytest]
addopts =
    --durations=20 -ra --junit-xml=junit-results.xml --tb=short
    --ignore=doc --ignore=examples --ignore=mne_bids/tests/data
filterwarnings =
    error
    ignore:Estimation of line frequency only supports.*:RuntimeWarning
    ignore:There are channels without locations (n/a)*:RuntimeWarning
    ignore:Did not find any electrodes.tsv.*:RuntimeWarning
    ignore:Did not find any coordsystem.json.*:RuntimeWarning
    ignore:Did not find any events.tsv.*:RuntimeWarning
    ignore:No events found or provided.*:RuntimeWarning
    ignore:Participants file not found for.*:RuntimeWarning
    ignore:Converting to FIF for anonymization:RuntimeWarning
    ignore:Converting to BV for anonymization:RuntimeWarning
    ignore:Converting data files to BrainVision format:RuntimeWarning
    ignore:Writing of electrodes.tsv is not supported for datatype.*:RuntimeWarning
    ignore:numpy.ufunc size changed.*:RuntimeWarning
    ignore:tostring\(\) is deprecated.*:DeprecationWarning
    ignore:MEG ref channel RMSP did not.*:RuntimeWarning
    # Python 3.10+ and NumPy 1.22 (and maybe also newer NumPy versions?)
    ignore:.*distutils\.sysconfig module is deprecated.*:DeprecationWarning
    # numba with NumPy dev
    ignore:`np.MachAr` is deprecated.*:DeprecationWarning
    # old MNE _fake_click
    ignore:The .*_event function was deprecated in Matplotlib.*:

[pydocstyle]
convention = pep257
match_dir = ^(?!\.|doc|examples).*$
add-ignore = D100,D104,D107,D413
add-select = D214,D215,D404,D405,D406,D407,D408,D409,D410,D411
ignore-decorators = property

[coverage:run]
omit =
    # Do not include test script in coverage report
    *tests*

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

[isort]
skip_glob = */*
